--- a/project/index.html
+++ b/project/index.html
@@ -514,7 +514,7 @@
 
                 </div>
                 <div class="m15">
-                    <label>Gender*</label><br>
+                    <label>Type your message</label><br>
                     <textarea style="width: 93.5%;" rows="6"></textarea>
                 </div>
 
