--- a/ecom/index.html
+++ b/ecom/index.html
@@ -224,7 +224,7 @@
             <h3>Categories</h3>
          </div>
          <div style="display: flex;">
-            <div class="box col-md-4 mx-auto">
+           <div class="col-md-4">
                <div class="img_container">
                   <div class="img-box">
                      <div class="img_box-inner">
@@ -239,7 +239,7 @@
 
                </div>
             </div>
-            <div class="box col-md-4 mx-auto">
+           <div class="col-md-4">
                <div class="img_container">
                   <div class="img-box">
                      <div class="img_box-inner">
@@ -254,7 +254,7 @@
 
                </div>
             </div>
-            <div class="box col-md-4 mx-auto">
+           <div class="col-md-4">
                <div class="img_container">
                   <div class="img-box">
                      <div class="img_box-inner">
@@ -269,7 +269,7 @@
 
                </div>
             </div>
-            <div class="box col-md-4 mx-auto">
+           <div class="col-md-4">
                <div class="img_container">
                   <div class="img-box">
                      <div class="img_box-inner">
