--- a/ecom/index.html
+++ b/ecom/index.html
@@ -223,7 +223,7 @@
          <div class="heading_container heading_center">
             <h3>Categories</h3>
          </div>
-         <div style="display: flex;">
+         <div class="row">
            <div class="col-md-4">
                <div class="img_container">
                   <div class="img-box">
