--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
             <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
             <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
-            <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+            <!-- <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li> -->
             <li class="nav-item"><a class="nav-link" href="MURTAZA-MUNDRAWALA.pdf">Resume</a></li>
           </ul>
         </div>
@@ -94,9 +94,9 @@
                       </ul>
                     </nav>
                   </div>
-                  <div class="mt-3" data-aos="fade-up" data-aos-delay="200"><a
+                  <!-- <div class="mt-3" data-aos="fade-up" data-aos-delay="200"><a
                       class="btn btn-primary shadow-sm mt-1 hover-effect" href="#contact">Get In Touch <i
-                        class="fas fa-arrow-right"></i></a></div>
+                        class="fas fa-arrow-right"></i></a></div> -->
                 </div>
               </div>
             </div>
@@ -117,13 +117,13 @@
                   <div class="pb-1">Email:</div>
                 </div>
                 <div class="col-sm-10">
-                  <div class="pb-1 fw-bolder"><a href="mailto:hey@mundrawala.ml">hey@mundrawala.ml</a></div>
+                  <div class="pb-1 fw-bolder"><a href="mailto:mundrawala18@gmail.com">mundrawala18@gmail.com</a></div>
                 </div>
                 <div class="col-sm-2">
                   <div class="pb-1">Mobile:</div>
                 </div>
                 <div class="col-sm-10">
-                  <div class="pb-1 fw-bolder"><a href="tel:+917490972908">+91 74909 72908</a></div>
+                  <div class="pb-1 fw-bolder"><a href="tel:+919737728472">+91 97377 28472</a></div>
                 </div>
                 <div class="col-sm-2">
                   <div class="pb-1">Address:</div>
@@ -253,7 +253,8 @@
           </div>
         </div>
       </div>
-      <div class="section px-2 px-lg-4 pb-4 pt-5 mb-5" id="contact">
+      <br/>
+      <!-- <div class="section px-2 px-lg-4 pb-4 pt-5 mb-5" id="contact">
         <div class="container-narrow">
           <div class="text-center mb-5">
             <h2 class="marker marker-center">Contact Me</h2>
@@ -372,7 +373,7 @@
 
           </div>
         </div>
-      </div>
+      </div> -->
       <footer class="pt-4 pb-4 text-center bg-light">
         <div class="container">
           <div class="my-3">
