--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
   <header class="bg-light">
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="header-nav" role="navigation">
-      <div class="container"><a class="link-dark navbar-brand site-title mb-0"><img src="images/logo.png" alt=""></a>
+      <div class="container"><a class="link-dark navbar-brand site-title mb-0"><img src="images/logo.png" width="65" alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
             class="navbar-toggler-icon"></span></button>
@@ -69,7 +69,7 @@
         <div class="cover bg-light">
           <div class="container px-3">
             <div class="row">
-              <div class="col-lg-6 p-2"><img class="img-fluid" src="images/illustrations/hello.svg" alt="hello" /></div>
+              <div class="col-lg-6 p-2"><img class="img-fluid" src="images/hello.svg" alt="hello" /></div>
               <div class="col-lg-6">
                 <div class="mt-5">
                   <p class="lead text-uppercase mb-1">Hello!</p>
@@ -116,20 +116,23 @@
                 <div class="col-sm-2">
                   <div class="pb-1">Email:</div>
                 </div>
-                <div class="col-sm-10">
+                <!-- <div class="col-sm-10">
                   <div class="pb-1 fw-bolder"><a href="mailto:mundrawala18@gmail.com">mundrawala18@gmail.com</a></div>
+                </div> -->
+                <div class="col-sm-10">
+                  <div class="pb-1 fw-bolder"><a style="text-decoration: none;" href="mailto:hey@mundrawala.tech">hey@mundrawala.tech</a></div>
                 </div>
                 <div class="col-sm-2">
                   <div class="pb-1">Mobile:</div>
                 </div>
                 <div class="col-sm-10">
-                  <div class="pb-1 fw-bolder"><a href="tel:+919737728472">+91 97377 28472</a></div>
+                  <div class="pb-1 fw-bolder"><a style="text-decoration: none;" href="tel:+919737728472">+91&nbsp;9737&nbsp;728&nbsp;472</a></div>
                 </div>
                 <div class="col-sm-2">
                   <div class="pb-1">Address:</div>
                 </div>
                 <div class="col-sm-10">
-                  <div class="pb-1 fw-bolder">Bhuj-Kachchh(GUJ)-India</div>
+                  <div class="pb-1 fw-bolder">Bhuj-Kachchh (GUJ)-India</div>
                 </div>
                 <div class="col-sm-2">
                   <div class="pb-1">Status:</div>
@@ -377,8 +380,8 @@
       <footer class="pt-4 pb-4 text-center bg-light">
         <div class="container">
           <div class="my-3">
-            <img src="favicon.png" height="40" width="55"
-              style="background-color: white; padding: 5px; border-radius: 12px; ;" />
+            <img src="images/logo.png" width="45" style="margin-bottom: 5px;"
+              />
             <div class="h4">Murtaza Mundrawala</div>
             <p>Web Developer & Mobile Application Developer</p>
             <div class="social-nav">
