--- a/index.html
+++ b/index.html
@@ -377,6 +377,8 @@
           </div>
         </div>
       </div> -->
+
+
       <footer class="pt-4 pb-4 text-center bg-light">
         <div class="container">
           <div class="my-3">
@@ -401,6 +403,13 @@
                 </ul>
               </nav>
             </div>
+          </div>
+          <div>
+            <!-- Badge Code - Do Not Change The Code -->
+            <img src="images/logo.png" width="30"  style="position: absolute; margin-top: 7px; margin-left:7px;"
+            />
+<a class="hitCounter" target="_blank" title="Hit counter" data-name="ca848e658180ff27cba65f5666ed7752|4|internal|10|#ffffff|#f6e05e|small|s-hit">Hit Counter</a><script>document.write("<script type='text/javascript' src='https://visitorshitcounter.com/js/hitCounter.js?v="+Date.now()+"'><\/script>");</script>
+<!-- Badge Code End Here -->
           </div>
           <div class="text-small text-secondary">
             <div class="mb-1">&copy; Murtaza Mundrawala. All rights reserved.</div>
