--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <html lang="en-US">
 
 <head>
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
   <script>
     window.addEventListener('contextmenu', function (e) {
       e.preventDefault();
     }, false);
-  </script>
+  </script> -->
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -47,7 +48,8 @@
 
   <header class="bg-light">
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="header-nav" role="navigation">
-      <div class="container"><a class="link-dark navbar-brand site-title mb-0"><img src="images/logo.png" width="65" alt=""></a>
+      <div class="container"><a class="link-dark navbar-brand site-title mb-0"><img src="images/logo.png" width="65"
+            alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
             class="navbar-toggler-icon"></span></button>
@@ -120,13 +122,15 @@
                   <div class="pb-1 fw-bolder"><a href="mailto:mundrawala18@gmail.com">mundrawala18@gmail.com</a></div>
                 </div> -->
                 <div class="col-sm-10">
-                  <div class="pb-1 fw-bolder"><a style="text-decoration: none;" href="mailto:hey@mundrawala.tech">hey@mundrawala.tech</a></div>
+                  <div class="pb-1 fw-bolder"><a style="text-decoration: none;"
+                      href="mailto:hey@mundrawala.tech">hey@mundrawala.tech</a></div>
                 </div>
                 <div class="col-sm-2">
                   <div class="pb-1">Mobile:</div>
                 </div>
                 <div class="col-sm-10">
-                  <div class="pb-1 fw-bolder"><a style="text-decoration: none;" href="tel:+919737728472">+91&nbsp;9737&nbsp;728&nbsp;472</a></div>
+                  <div class="pb-1 fw-bolder"><a style="text-decoration: none;"
+                      href="tel:+919737728472">+91&nbsp;9737&nbsp;728&nbsp;472</a></div>
                 </div>
                 <div class="col-sm-2">
                   <div class="pb-1">Address:</div>
@@ -382,8 +386,7 @@
       <footer class="pt-4 pb-4 text-center bg-light">
         <div class="container">
           <div class="my-3">
-            <img src="images/logo.png" width="45" style="margin-bottom: 5px;"
-              />
+            <img src="images/logo.png" width="45" style="margin-bottom: 5px;" />
             <div class="h4">Murtaza Mundrawala</div>
             <p>Web Developer & Mobile Application Developer</p>
             <div class="social-nav">
@@ -404,13 +407,14 @@
               </nav>
             </div>
           </div>
-          <div>
-            <!-- Badge Code - Do Not Change The Code -->
-            <img src="images/logo.png" width="30"  style="position: absolute; margin-top: 7px; margin-left:7px;"
-            />
-<a class="hitCounter" target="_blank" title="Hit counter" data-name="ca848e658180ff27cba65f5666ed7752|4|internal|10|#ffffff|#f6e05e|small|s-hit">Hit Counter</a><script>document.write("<script type='text/javascript' src='https://visitorshitcounter.com/js/hitCounter.js?v="+Date.now()+"'><\/script>");</script>
-<!-- Badge Code End Here -->
-          </div>
+          <!-- <div>
+
+            <img src="images/logo.png" width="30" style="position: absolute; margin-top: 7px; margin-left:7px;" />
+            <a class="hitCounter" target="_blank" title="Hit counter"
+              data-name="ca848e658180ff27cba65f5666ed7752|4|internal|10|#ffffff|#f6e05e|small|s-hit">Hit Counter</a>
+            <script>document.write("<script type='text/javascript' src='https://visitorshitcounter.com/js/hitCounter.js?v=" + Date.now() + "'><\/script>");</script>
+
+          </div> -->
           <div class="text-small text-secondary">
             <div class="mb-1">&copy; Murtaza Mundrawala. All rights reserved.</div>
 
