--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <html lang="en-US">
 
 <head>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script> -->
   <script>
     window.addEventListener('contextmenu', function (e) {
       e.preventDefault();
     }, false);
-  </script> -->
+  </script>
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
