--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Mundrawala</title>
+  <title>Murtaza Mundrawala</title>
 
   <link rel="icon" href="favicon.png" type="image/png" sizes="16x12">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin" />
