--- a/amzn/index.html
+++ b/amzn/index.html
@@ -8,21 +8,27 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <style>
-        input:focus {
-            outline: none;
-        }
+        @media screen and (max-width:800px) {
 
-        select {
-            -webkit-appearance: none;
-            -moz-appearance: none;
-            background: transparent;
-            background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='24' viewBox='0 0 25 24' width='24' xmlns='http://www.w3.org/00/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
-            background-repeat: no-repeat;
-            background-position-x: 100%;
-            background-position-y: 12px;
-            border: 1px solid #dfdfdf;
-            border-radius: 2px;
-            padding-right: 2rem;
+
+            input:focus {
+                outline: none;
+            }
+
+            select {
+                -webkit-appearance: none;
+                -moz-appearance: none;
+                background: transparent;
+                background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='24' viewBox='0 0 25 24' width='24' xmlns='http://www.w3.org/00/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
+                background-repeat: no-repeat;
+                background-position-x: 100%;
+                background-position-y: 12px;
+                border: 1px solid #dfdfdf;
+                border-radius: 2px;
+                padding-right: 2rem;
+            }
+
+            
         }
     </style>
 </head>
