--- a/amzn/index.html
+++ b/amzn/index.html
@@ -8,8 +8,6 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <style>
-        @media screen and (max-width:800px) {
-
 
             input:focus {
                 outline: none;
@@ -28,12 +26,11 @@
                 padding-right: 2rem;
             }
 
-            
-        }
+        
     </style>
 </head>
 
-<body>
+<body style="max-width: 450px;">
     <div style="background-color:#232f3e; width: 100%; height: 55px;">
         <img src="./logo.png" height="35" style="margin-top: 10px; margin-left: 10px;" />
     </div>
