--- a/amzn/index.html
+++ b/amzn/index.html
@@ -7,6 +7,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <style>
 
             input:focus {
