--- a/amzn/index.html
+++ b/amzn/index.html
@@ -9,14 +9,11 @@
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        @font-face {
-            font-family: SansStd;
-            src: url("./OfficinaSansStd-Bold.otf") format("opentype");
-        }
+
 
         @font-face {
             font-family: SansStd;
-            font-weight: bold;
+         
             src: url("./OfficinaSansStd-Bold.otf") format("opentype");
         }
 
@@ -108,7 +105,7 @@
 
         </div>
         <p style="margin-left: 18%; margin-right: 10%;">After 30 days, you will be automatically charged ₹1499 / year.
-            <b>Cancel anytime</b>
+            <b style="font-weight: bold;">Cancel anytime</b>
         </p>
         <script>
             var app = new Vue({
