--- a/amzn/index.html
+++ b/amzn/index.html
@@ -107,6 +107,17 @@
         <p style="margin-left: 18%; margin-right: 10%;">After 30 days, you will be automatically charged ₹1499 / year.
             <b style="font-weight: bold;">Cancel anytime</b>
         </p>
+
+        <div style="background-color: rgb(238, 238, 238); padding: 10px;">
+            <div style="background-color: white; color: grey; border-radius: 8px; margin: 10px; padding: 10px; border: gray 1px solid; display: flex;">
+                <div style="margin-right: 20px;">
+                    <div style="background-color:rgb(238, 238, 238); border-radius: 50px; width: 20px; height: 20px; border: gray 1px solid;">
+
+                    </div>
+                </div>
+                <div style="margin-top: 5px;">Other UPI Apps Unavailable <span style="color: cadetblue;">Why?</span></div>
+            </div>
+        </div>
         <script>
             var app = new Vue({
                 el: '#app',
