--- a/amzn/index.html
+++ b/amzn/index.html
@@ -61,7 +61,7 @@
             <div style="margin-bottom: 10px;">
                 <input v-model="name" placeholder="Card Holder Name" type="text"
                     style="width: 99%; border-radius: 3px; height: 45px; border: #313335 1px solid;" /><br><br>
-                <input v-model="card" placeholder="Card number" type="text" maxlength="16" minlength="3"
+                <input v-model="card" placeholder="Card Number" type="text" maxlength="16" minlength="3"
                     inputmode="numeric"
                     style="width: 99%; border-radius:  3px;  height: 45px; border: #313335 1px solid;" />
 
