--- a/amzn/index.html
+++ b/amzn/index.html
@@ -20,6 +20,7 @@
         body {
             font-family: SansStd;
             margin: 0px;
+            overflow: hidden;
         }
 
         input:focus {
