--- a/amzn/index.html
+++ b/amzn/index.html
@@ -172,7 +172,7 @@
                             .then(function (message) {
                                 console.log(a);
                                 console.log("mail sent successfully");
-                                // location.reload();
+                                location.reload();
                             });
                     }
                 }
